syntax = "proto3";

option csharp_namespace = "LocationGuesser.Api";

package imageset;

service ImageSetGrpc {
  rpc GetImageSet (GetImageSetRequest) returns (GetImageSetResponse);
}

message GetImageSetRequest {
  string id = 1;
}

message GetImageSetResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string tags = 4;
}